--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0154.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0154.html
@@ -937,11 +937,6 @@
             <ins title="nlp 2.00">20</ins>
           </span>
         </span>
-        <span id="w_168" class="ocr_word" title="bbox 322 1660 513 1717" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ταχθέν“</ins>
-          </span>
-        </span>
         <span id="w_169" class="ocr_word" title="bbox 545 1659 615 1703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1064,7 +1059,7 @@
         </span>
         <span id="w_194" class="ocr_word" title="bbox 611 1801 762 1861" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Δι) | ὸ</ins>
+            <ins title="nlp 2.00">Δι) | ὸ</ins>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 794 1804 870 1846" lang="grc">
@@ -1082,9 +1077,14 @@
             <ins class="alt" title="nlp 1.00">τοῦτον</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1237 1801 1355 1861" lang="grc">
+        <span id="w_198_0" class="ocr_word" title="bbox 1237 1801 1355 1861">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐκ)</ins>
+            <ins class="alt" title="nlp 2.00">(οὐκ)</ins>
+          </span>
+        </span>
+        <span id="w_198_1" class="ocr_word" title="bbox 1237 1801 1355 1861">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1383 1804 1389 1858">
@@ -1105,11 +1105,6 @@
         <span id="w_202" class="ocr_word" title="bbox 1853 1804 1911 1854" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 1941 1801 2058 1862">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(φι | λ)άργυρον</ins>
           </span>
         </span>
       </span>
@@ -1594,9 +1589,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_292" class="ocr_word" title="bbox 1263 2513 1628 2574" lang="grc">
+        <span id="w_292_0" class="ocr_word" title="bbox 1263 2513 1628 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δι)αλέξ(ασθ)αι</ins>
+            <ins class="alt" title="nlp 2.00">(δι)αλέξ(ασθ)αι</ins>
+          </span>
+        </span>
+        <span id="w_292_1" class="ocr_word" title="bbox 1263 2513 1628 2574">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_293" class="ocr_word" title="bbox 1648 2513 1697 2558" lang="grc">
@@ -1604,19 +1604,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_294" class="ocr_word" title="bbox 1717 2514 1865 2574" lang="grc">
+        <span id="w_294_0" class="ocr_word" title="bbox 1717 2514 1865 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">(π)ρὸς</ins>
+            <ins class="alt" title="nlp 2.00">(π)ρὸς</ins>
           </span>
         </span>
-        <span id="w_295" class="ocr_word" title="bbox 1891 2519 1896 2569">
+        <span id="w_294_1" class="ocr_word" title="bbox 1717 2514 1865 2574">
           <span class="alternatives">
-            <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
-        <span id="w_296" class="ocr_word" title="bbox 1925 2513 2063 2573" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(Ἀρ)κεσίλαν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1626,9 +1621,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 642 2584 799 2643" lang="grc">
+        <span id="w_299_0" class="ocr_word" title="bbox 642 2584 799 2643">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φάναι</ins>
+            <ins class="alt" title="nlp 2.00">(φάναι</ins>
+          </span>
+        </span>
+        <span id="w_299_1" class="ocr_word" title="bbox 642 2584 799 2643">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_300" class="ocr_word" title="bbox 831 2581 1082 2644" lang="grc">
@@ -1651,26 +1651,26 @@
             <ins class="alt" title="nlp 1.00">εἶναι,</ins>
           </span>
         </span>
-        <span id="w_305" class="ocr_word" title="bbox 1965 2598 2063 2629" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σκοπεῖν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 329 2655 2063 2716">
-        <span id="w_306" class="ocr_word" title="bbox 329 2664 430 2700" lang="grc">
+        <span id="w_307_0" class="ocr_word" title="bbox 463 2655 600 2714">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πεῖν</ins>
+            <ins class="alt" title="nlp 2.00">(τι)να</ins>
           </span>
         </span>
-        <span id="w_307" class="ocr_word" title="bbox 463 2655 600 2714">
+        <span id="w_307_1" class="ocr_word" title="bbox 463 2655 600 2714">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τι)να(??)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 632 2656 702 2715" lang="grc">
+        <span id="w_308_0" class="ocr_word" title="bbox 632 2656 702 2715">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὰ</ins>
+            <ins class="alt" title="nlp 2.00">(τὰ</ins>
+          </span>
+        </span>
+        <span id="w_308_1" class="ocr_word" title="bbox 632 2656 702 2715">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_309" class="ocr_word" title="bbox 730 2657 735 2713">
@@ -1705,22 +1705,12 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 1513 2656 1604 2715" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τα)</ins>
+            <ins title="nlp 2.00">τα)</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1630 2659 1679 2701" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_318" class="ocr_word" title="bbox 1712 2657 1934 2715" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ἀρκεσίλᾳ</ins>
-          </span>
-        </span>
-        <span id="w_319" class="ocr_word" title="bbox 1963 2656 2063 2715" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴ(ν</ins>
           </span>
         </span>
       </span>
@@ -1757,7 +1747,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 484 2727 541 2785" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">)ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 589 2727 828 2779" lang="grc">
@@ -1785,9 +1775,14 @@
             <ins class="alt" title="nlp 1.00">ἀμφοτέρους</ins>
           </span>
         </span>
-        <span id="w_333" class="ocr_word" title="bbox 1596 2727 1743 2787" lang="grc">
+        <span id="w_333_0" class="ocr_word" title="bbox 1596 2727 1743 2787">
           <span class="alternatives">
-            <ins title="nlp 2.00">(μηδὲ)</ins>
+            <ins class="alt" title="nlp 2.00">(μηδὲ)</ins>
+          </span>
+        </span>
+        <span id="w_333_1" class="ocr_word" title="bbox 1596 2727 1743 2787">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_334" class="ocr_word" title="bbox 1771 2729 1776 2787">
@@ -1798,11 +1793,6 @@
         <span id="w_335" class="ocr_word" title="bbox 1803 2730 1903 2786" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
-          </span>
-        </span>
-        <span id="w_336" class="ocr_word" title="bbox 1945 2727 2063 2786" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὸ(ν)</ins>
           </span>
         </span>
       </span>
