--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0155.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0155.html
@@ -67,9 +67,14 @@
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1432 286 1604 344" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 1432 286 1604 344">
           <span class="alternatives">
-            <ins title="nlp 2.00">τ(οπυτ)ο</ins>
+            <ins class="alt" title="nlp 2.00">τ(οῦτ)ο</ins>
+          </span>
+        </span>
+        <span id="w_10_1" class="ocr_word" title="bbox 1432 286 1604 344">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1634 288 1835 332" lang="grc">
@@ -82,16 +87,16 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1896 287 1988 344" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">όμιλῶν.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 251 358 1166 417">
-        <span id="w_15" class="ocr_word" title="bbox 413 359 514 417" lang="grc">
+        <span id="w_15_0" class="ocr_word" title="bbox 413 359 514 417">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὡ)ς</ins>
+            <ins class="alt" title="nlp 2.00">(ὡ)ς</ins>
+          </span>
+        </span>
+        <span id="w_15_1" class="ocr_word" title="bbox 413 359 514 417">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_16" class="ocr_word" title="bbox 545 358 597 403" lang="grc">
@@ -107,11 +112,6 @@
         <span id="w_18" class="ocr_word" title="bbox 722 374 906 414" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἰρηκὼς</ins>
-          </span>
-        </span>
-        <span id="w_19" class="ocr_word" title="bbox 937 359 1166 415" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνηγγέλη</ins>
           </span>
         </span>
       </span>
@@ -226,9 +226,9 @@
             <ins title="nlp 2.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_41" class="ocr_word" title="bbox 820 788 1135 845" lang="grc">
+        <span id="w_41_0" class="ocr_word" title="bbox 820 788 1135 845">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δυ)νάμενος“</ins>
+            <ins class="alt" title="nlp 2.00">(δυ)νάμενος“</ins>
           </span>
         </span>
       </span>
@@ -263,9 +263,14 @@
             <ins class="alt" title="nlp 1.00">αὐτόν,</ins>
           </span>
         </span>
-        <span id="w_48" class="ocr_word" title="bbox 1231 859 1409 917" lang="grc">
+        <span id="w_48_0" class="ocr_word" title="bbox 1231 859 1409 917">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἰ)πών</ins>
+            <ins class="alt" title="nlp 2.00">(εἰ)πών</ins>
+          </span>
+        </span>
+        <span id="w_48_1" class="ocr_word" title="bbox 1231 859 1409 917">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_49" class="ocr_word" title="bbox 1446 877 1487 903" lang="grc">
@@ -283,11 +288,6 @@
             <ins title="nlp 2.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1774 858 1991 916" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρῶτ(ο)ν</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 247 930 2045 989">
         <span id="w_53" class="ocr_word" title="bbox 247 947 294 976" lang="grc">
@@ -297,13 +297,17 @@
         </span>
         <span id="w_54" class="ocr_word" title="bbox 307 931 312 989">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">I</ins>
-            <del title="nlp 0.90">I</del>
+            <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_55" class="ocr_word" title="bbox 323 930 463 988" lang="grc">
+        <span id="w_55_0" class="ocr_word" title="bbox 323 930 463 988">
           <span class="alternatives">
-            <ins title="nlp 2.00">(θέ)ν,</ins>
+            <ins class="alt" title="nlp 2.00">(θέ)ν,</ins>
+          </span>
+        </span>
+        <span id="w_55_1" class="ocr_word" title="bbox 323 930 463 988">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 494 944 583 986" lang="grc">
@@ -315,11 +319,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">etc.</ins>
             <del title="nlp 0.90">etc.</del>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 2011 945 2045 973" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">10</ins>
           </span>
         </span>
       </span>
@@ -467,9 +466,14 @@
             <ins title="nlp 2.00">|</ins>
           </span>
         </span>
-        <span id="w_86" class="ocr_word" title="bbox 779 1218 984 1275" lang="grc">
+        <span id="w_86_0" class="ocr_word" title="bbox 779 1218 984 1275">
           <span class="alternatives">
-            <ins title="nlp 2.00">(εἴ)ρηται</ins>
+            <ins class="alt" title="nlp 2.00">(εἴ)ρηται</ins>
+          </span>
+        </span>
+        <span id="w_86_1" class="ocr_word" title="bbox 779 1218 984 1275">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1016 1217 1137 1277">
@@ -495,11 +499,6 @@
         <span id="w_91" class="ocr_word" title="bbox 1731 1226 1820 1262" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_92" class="ocr_word" title="bbox 1859 1216 1992 1275" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">(τοι | ού)των</ins>
           </span>
         </span>
       </span>
@@ -618,9 +617,9 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 248 1431 463 1491">
-        <span id="w_117" class="ocr_word" title="bbox 248 1431 463 1491" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 248 1431 463 1491">
           <span class="alternatives">
-            <ins title="nlp 2.00">(α)μένων</ins>
+            <ins class="alt" title="nlp 2.00">(α)μένων</ins>
           </span>
         </span>
       </span>
@@ -761,8 +760,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 743 1721 882 1763">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Laert.</ins>
-            <del title="nlp 0.90">Laert.</del>
+            <ins title="nlp 2.00">Laërt.</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 910 1720 993 1763">
@@ -788,7 +786,7 @@
         </span>
         <span id="w_146" class="ocr_word" title="bbox 1493 1720 1537 1778" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1569 1719 1824 1777" lang="grc">
@@ -1041,19 +1039,19 @@
             <ins class="alt" title="nlp 1.00">τινες,</ins>
           </span>
         </span>
-        <span id="w_197" class="ocr_word" title="bbox 1314 2079 1626 2136" lang="grc">
+        <span id="w_197_0" class="ocr_word" title="bbox 1314 2079 1626 2136">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ὀγδοήκοντα]</ins>
+            <ins class="alt" title="nlp 2.00">[ὀγδοήκοντα]</ins>
+          </span>
+        </span>
+        <span id="w_197_1" class="ocr_word" title="bbox 1314 2079 1626 2136">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1659 2082 1731 2134" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ἔτη</ins>
-          </span>
-        </span>
-        <span id="w_199" class="ocr_word" title="bbox 1769 2081 1992 2134" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βιώσαντα</ins>
           </span>
         </span>
       </span>
@@ -1369,7 +1367,7 @@
         </span>
         <span id="w_258" class="ocr_word" title="bbox 1383 2606 1591 2611">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἐπεὶ — — —)σαν,</ins>
+            <ins title="nlp 2.00">ἐπεὶ — — —)σαν,</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 1758 2578 1913 2636" lang="grc">
