--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0156.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0156.html
@@ -97,8 +97,7 @@
         </span>
         <span id="w_19" class="ocr_word" title="bbox 870 380 918 424">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δ᾿</ins>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 937 397 1019 423" lang="grc">
@@ -243,15 +242,14 @@
             <ins class="alt" title="nlp 1.00">μείνας</ins>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 1435 539 1453 566" lang="grc">
+        <span id="w_49_0" class="ocr_word" title="bbox 1435 539 1453 566">
           <span class="alternatives">
-            <ins title="nlp 2.00">εὐαί| (μων)</ins>
+            <ins class="alt" title="nlp 2.00">εὐδαί|(μων)</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1750 526 1827 566">
+        <span id="w_49_1" class="ocr_word" title="bbox 1435 539 1453 566">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">etc.</ins>
-            <del title="nlp 0.90">etc.</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -363,21 +361,20 @@
             <del title="nlp 0.90">Buecheler:</del>
           </span>
         </span>
-        <span id="w_71" class="ocr_word" title="bbox 1495 667 1695 718">
+        <span id="w_71_0" class="ocr_word" title="bbox 1495 667 1695 718">
           <span class="alternatives">
-            <ins title="nlp 2.00">„μανδατ</ins>
+            <ins class="alt" title="nlp 2.00">„mandat</ins>
+          </span>
+        </span>
+        <span id="w_71_1" class="ocr_word" title="bbox 1495 667 1695 718">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1739 665 1950 708">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">Cleanthes</ins>
             <del title="nlp 0.90">Cleanthes</del>
-          </span>
-        </span>
-        <span id="w_73" class="ocr_word" title="bbox 1990 669 2035 709">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">ut</ins>
-            <del title="nlp 0.90">ut</del>
           </span>
         </span>
       </span>
@@ -742,7 +739,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 1382 1158 1719 1222" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τ)ριάκ(ον) |τα</ins>
+            <ins title="nlp 2.00">τ)ριάκ(ον) |τα</ins>
           </span>
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1750 1162 1821 1206" lang="grc">
@@ -750,9 +747,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_143" class="ocr_word" title="bbox 1853 1162 1989 1221" lang="grc">
+        <span id="w_143_0" class="ocr_word" title="bbox 1853 1162 1989 1221">
           <span class="alternatives">
-            <ins title="nlp 2.00">(δύο).</ins>
+            <ins class="alt" title="nlp 2.00">(δύο).</ins>
           </span>
         </span>
       </span>
@@ -944,9 +941,9 @@
             <del title="nlp 0.90">Gomperzius</del>
           </span>
         </span>
-        <span id="w_175" class="ocr_word" title="bbox 722 1451 927 1506" lang="grc">
+        <span id="w_175_0" class="ocr_word" title="bbox 722 1451 927 1506">
           <span class="alternatives">
-            <ins title="nlp 2.00">Probayit.</ins>
+            <ins class="alt" title="nlp 2.00">probavit.</ins>
           </span>
         </span>
       </span>
@@ -1122,13 +1119,7 @@
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1350 1679 1455 1706" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">τοῦτ</ins>
-          </span>
-        </span>
-        <span id="w_209" class="ocr_word" title="bbox 1468 1661 1477 1678">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">τοῦτ’</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1496 1679 1613 1706" lang="grc">
