--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0161.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0161.html
@@ -283,9 +283,14 @@
             <ins class="alt" title="nlp 1.00">αὐτὸς</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 596 656 731 696" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 596 656 731 696">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ἀνιμᾷ</ins>
+            <ins class="alt" title="nlp 2.00">ἀνιμᾷ</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 596 656 731 696">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 761 641 838 691" lang="grc">
@@ -326,11 +331,6 @@
         <span id="w_60" class="ocr_word" title="bbox 1781 644 1862 698" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὴν</ins>
-          </span>
-        </span>
-        <span id="w_61" class="ocr_word" title="bbox 1885 640 1967 697" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
       </span>
@@ -395,9 +395,9 @@
             <ins class="alt" title="nlp 1.00">ἀέρα</ins>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1817 715 1967 769" lang="grc">
+        <span id="w_74_0" class="ocr_word" title="bbox 1817 715 1967 769">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἄνω&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ἄνω&amp;x003E;</ins>
           </span>
         </span>
       </span>
@@ -726,9 +726,14 @@
             <del title="nlp 0.90">effigiata.</del>
           </span>
         </span>
-        <span id="w_132" class="ocr_word" title="bbox 670 1141 798 1195">
+        <span id="w_132_0" class="ocr_word" title="bbox 670 1141 798 1195">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Ita&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;Ita&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_132_1" class="ocr_word" title="bbox 670 1141 798 1195">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_133" class="ocr_word" title="bbox 841 1141 969 1184">
@@ -758,12 +763,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">et</ins>
             <del title="nlp 0.90">et</del>
-          </span>
-        </span>
-        <span id="w_138" class="ocr_word" title="bbox 1712 1143 1969 1198">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Speusippus</ins>
-            <del title="nlp 0.90">Speusippus</del>
           </span>
         </span>
       </span>
@@ -976,9 +975,14 @@
             <ins title="nlp 2.00">εἶτα</ins>
           </span>
         </span>
-        <span id="w_177" class="ocr_word" title="bbox 1001 1427 1166 1481" lang="grc">
+        <span id="w_177_0" class="ocr_word" title="bbox 1001 1427 1166 1481">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;κατὰ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;κατὰ&amp;003E;</ins>
+          </span>
+        </span>
+        <span id="w_177_1" class="ocr_word" title="bbox 1001 1427 1166 1481">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_178" class="ocr_word" title="bbox 1195 1428 1248 1471" lang="grc">
@@ -994,11 +998,6 @@
         <span id="w_180" class="ocr_word" title="bbox 1507 1428 1871 1484" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀποσβέννυσθαι</ins>
-          </span>
-        </span>
-        <span id="w_181" class="ocr_word" title="bbox 1902 1428 1969 1473">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δι᾿</ins>
           </span>
         </span>
       </span>
@@ -1080,19 +1079,19 @@
             <ins class="alt" title="nlp 1.00">πάλιν</ins>
           </span>
         </span>
-        <span id="w_198" class="ocr_word" title="bbox 1360 1571 1561 1626">
+        <span id="w_198_0" class="ocr_word" title="bbox 1360 1571 1561 1626">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ποιεῖν&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;ποιεῖν&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_198_1" class="ocr_word" title="bbox 1360 1571 1561 1626">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1592 1573 1655 1622" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_200" class="ocr_word" title="bbox 1691 1575 1967 1626" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὐναντίον,</ins>
           </span>
         </span>
       </span>
@@ -1551,14 +1550,14 @@
             <ins class="alt" title="nlp 1.00">πάντων</ins>
           </span>
         </span>
-        <span id="w_289" class="ocr_word" title="bbox 1791 2146 1892 2203" lang="grc">
+        <span id="w_289_0" class="ocr_word" title="bbox 1791 2146 1892 2203">
           <span class="alternatives">
-            <ins title="nlp 2.00">[εἰς]</ins>
+            <ins class="alt" title="nlp 2.00">[εἰς]</ins>
           </span>
         </span>
-        <span id="w_290" class="ocr_word" title="bbox 1917 2146 1967 2189" lang="grc">
+        <span id="w_289_1" class="ocr_word" title="bbox 1791 2146 1892 2203">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἕν</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1913,14 +1912,19 @@
             <ins title="nlp 2.00">ἀέρα</ins>
           </span>
         </span>
-        <span id="w_354" class="ocr_word" title="bbox 344 2674 426 2722" lang="grc">
+        <span id="w_354_0" class="ocr_word" title="bbox 344 2674 426 2722">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ε4ἰς πῦρ· καὶ τὸ μὲν πῦρ ἄνω&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;εἰς</ins>
+          </span>
+        </span>
+        <span id="w_354_1" class="ocr_word" title="bbox 344 2674 426 2722">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_361" class="ocr_word" title="bbox 1050 2672 1247 2719" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">φέρεσθαι,</ins>
+            <ins title="nlp 2.00">πῦρ· καὶ τὸ μὲν πῦρ ἄνω&amp;x003E;φέρεσθαι,</ins>
           </span>
         </span>
         <span id="w_362" class="ocr_word" title="bbox 1272 2688 1338 2710" lang="grc">
@@ -1953,11 +1957,6 @@
             <ins title="nlp 2.00">περίγεια</ins>
           </span>
         </span>
-        <span id="w_368" class="ocr_word" title="bbox 1898 2692 1967 2724" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χωρεῖν.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 225 2727 1969 2777">
         <span id="w_370" class="ocr_word" title="bbox 418 2732 459 2763">
@@ -1965,9 +1964,14 @@
             <ins class="alt" title="nlp 1.00">13</ins>
           </span>
         </span>
-        <span id="w_371" class="ocr_word" title="bbox 486 2728 600 2776">
+        <span id="w_371_0" class="ocr_word" title="bbox 486 2728 600 2776">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;Ita&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;x003C;Ita&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_371_1" class="ocr_word" title="bbox 486 2728 600 2776">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 628 2727 713 2763">
@@ -2018,12 +2022,6 @@
         <span id="w_380" class="ocr_word" title="bbox 1705 2737 1783 2767" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πᾶν</ins>
-          </span>
-        </span>
-        <span id="w_381" class="ocr_word" title="bbox 1809 2731 1969 2777">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">probant</ins>
-            <del title="nlp 0.90">probant</del>
           </span>
         </span>
       </span>
@@ -2514,9 +2512,14 @@
             <ins class="alt" title="nlp 1.00">τινος</ins>
           </span>
         </span>
-        <span id="w_466" class="ocr_word" title="bbox 800 3158 962 3206" lang="grc">
+        <span id="w_466_0" class="ocr_word" title="bbox 800 3158 962 3206">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ζῴου.&amp;#x003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;003C;ζῴου&amp;003E;.</ins>
+          </span>
+        </span>
+        <span id="w_466_1" class="ocr_word" title="bbox 800 3158 962 3206">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_467" class="ocr_word" title="bbox 1043 3162 1087 3193">
@@ -2549,12 +2552,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">del.</ins>
             <del title="nlp 0.90">del.</del>
-          </span>
-        </span>
-        <span id="w_473" class="ocr_word" title="bbox 1853 3162 1965 3200">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Dieli.</ins>
-            <del title="nlp 0.90">Dieli.</del>
           </span>
         </span>
       </span>
